[project]
name = "magiccube"
version = "0.0.5"
authors = [
  { name="Gonçalo Trincão Cunha", email="goncalo.cunha@gmail.com" },
]
description = "NxNxN Rubik Cube implementation"
keywords = ["rubik", "cube", "solver", "Rubik Cube", "NxNxN"]
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.5"
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy"
]

[project.urls]
"Homepage" = "https://github.com/trincaog/magiccube"

[tool.setuptools]
packages = ["magiccube"]
